--- a/bestmotherfuckingwebsite/index.html
+++ b/bestmotherfuckingwebsite/index.html
@@ -189,7 +189,7 @@
         I'm wondering why you're still reading this text. Really. Stop. Please. I mean, seriously. Why are you still reading?
     </p>
     <a class="kopimi" href="http://www.kopimi.com/kopimi" title="Kopimi">
-        <img class="kopimi" src="img/kopimi.svg" title="Kopimi Logo">
+        <img class="kopimi" src="kopimi.svg" title="Kopimi Logo">
     </a>
     <h2>Contributions</h2>
     <p>Since this website includes some contributions, and I'm not an asshole, I'll publically thank the following users for
