--- a/bestmotherfuckingwebsite/index.html
+++ b/bestmotherfuckingwebsite/index.html
@@ -130,7 +130,7 @@
     <h2>Put some pictures</h2>
     <div class="fancyPositioning">
         <div class="picture-left">
-            <img src="img/cat.jpg" title="A nice and cute cat">
+            <img src="cat.jpg" title="A nice and cute cat">
             <p class="caption">A cat, just to keep the context of the website.</p>
         </div>
         <div class="tleft">
